@@ -45,8 +45,9 @@
  * Added `opus-primus-ignite.php` for theme initialization requirements
  *
  * @version     1.3
- * @date        September 21, 2014
+ * @date        October 9, 2014
  * Replaced `require_once` with `locate_template`
+ * Added OpusPrimusComments class methods to work-around duplicate output issue
  */
 
 /** Fire up the theme with its classes, widgets, and defaults */
@@ -404,3 +405,91 @@ function opus_primus_compatibility() {
 
 /** End function - opus primus compatibility */
 add_action( 'wp_enqueue_scripts', 'opus_primus_compatibility' );
+
+
+/**
+ * Before Comment Form
+ * Text to be shown before form
+ *
+ * @package  OpusPrimus
+ * @since    0.1
+ *
+ * @uses     __
+ * @uses     apply_filters
+ * @uses     have_comments
+ * @uses     post_password_required
+ *
+ * @internal used with comment_form_before hook
+ * @internal NB: hook is only accessible if comments are open
+ *
+ * @version  1.0.1
+ * @date     February 19, 2013
+ * Fixed no comments message
+ *
+ * @version  1.3
+ * @date     October 9, 2014
+ * Moved from OpusPrimusComments class to correct for duplicate output?!
+ * @todo     This Double-Stuff Oreo thing has to go ... it's bad for the diet
+ */
+function opus_primus_before_comment_form() {
+	/** Conditional check for password protected posts ... no comments for you! */
+	if ( post_password_required() ) {
+		printf(
+			'<span class="comments-password-message">' .
+			apply_filters( 'opus_comments_password_required', __( 'This post is password protected. Enter the password to view comments.', 'opus-primus' ) ) .
+			'</span>'
+		);
+
+		return;
+	}
+	/** End if - post password required */
+
+	/** If comments are open, but there are no comments. */
+	if ( ! have_comments() ) {
+		printf(
+			'<span class="no-comments-message">' .
+			apply_filters( 'opus_no_comments_message', __( 'Start a discussion ...', 'opus-primus' ) ) .
+			'</span>'
+		);
+	}
+	/** End if - not have comments */
+
+}
+
+/** End function - before comment form */
+add_action( 'comment_form_before', 'opus_primus_before_comment_form' );
+
+
+/**
+ * Comments Form Closed
+ * Test to be displayed if comments are closed
+ *
+ * @package  OpusPrimus
+ * @since    0.1
+ *
+ * @uses     __
+ * @uses     apply_filters
+ * @uses     is_page
+ *
+ * @internal used with comment_form_comments_closed hook
+ *
+ * @version  1.3
+ * @date     October 9, 2014
+ * Moved from OpusPrimusComments class to correct for duplicate output?!
+ * @todo     This Double-Stuff Oreo thing has to go ... it's bad for the diet
+ */
+function opus_primus_comments_form_closed() {
+	if ( ! is_page() ) {
+		printf(
+			'<span class="comments-closed-message">' .
+			apply_filters( 'opus_comments_form_closed', __( 'New comments are not being accepted at this time, please feel free to contact the post author directly.', 'opus-primus' ) ) .
+			'</span>'
+		);
+	}
+	/** End if - not is page */
+
+}
+
+/** End function - comments form closed */
+
+add_action( 'comment_form_comments_closed', 'opus_primus_comments_form_closed' );
